--- a/app/src/main/res/layout/fragment_clases.xml
+++ b/app/src/main/res/layout/fragment_clases.xml
@@ -20,10 +20,12 @@
 
     <ListView
         android:id="@+id/lvClase_C"
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="580dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/textClase"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textClase" />
 
     <Button
         android:id="@+id/btNuevo_C"
