--- a/app/src/main/res/layout/fragment_crear_raza.xml
+++ b/app/src/main/res/layout/fragment_crear_raza.xml
@@ -21,9 +21,9 @@
 
     <TextView
         android:id="@+id/textNombre"
-        android:layout_width="85dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="Nombre: "
         android:textAlignment="textEnd"
@@ -32,33 +32,13 @@
 
     <EditText
         android:id="@+id/etNombre_CR"
-        android:layout_width="250dp"
+        android:layout_width="256dp"
         android:layout_height="52dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/textNombre"
         app:layout_constraintStart_toEndOf="@+id/textNombre"
         app:layout_constraintTop_toTopOf="@+id/textNombre" />
-
-    <TextView
-        android:id="@+id/textDescripcion"
-        android:layout_width="85dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Descripción: "
-        android:textAlignment="textEnd"
-        app:layout_constraintStart_toStartOf="@+id/textNombre"
-        app:layout_constraintTop_toBottomOf="@+id/textNombre" />
-
-    <EditText
-        android:id="@+id/etDescripcion_CR"
-        android:layout_width="250dp"
-        android:layout_height="52dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/textDescripcion"
-        app:layout_constraintStart_toEndOf="@+id/textDescripcion"
-        app:layout_constraintTop_toTopOf="@+id/textDescripcion" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
@@ -69,14 +49,14 @@
 
     <TextView
         android:id="@+id/textVidaBase"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:text="Vida base: "
         android:textAlignment="textEnd"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline1" />
+        app:layout_constraintTop_toBottomOf="@+id/textNombre" />
 
     <EditText
         android:id="@+id/etVida_CR"
@@ -94,18 +74,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="246dp" />
+        app:layout_constraintGuide_begin="400dp" />
 
     <TextView
         android:id="@+id/textAtk"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="Base ATK: "
         android:textAlignment="textEnd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline1" />
 
     <EditText
         android:id="@+id/etAtk_CR"
@@ -120,7 +100,7 @@
 
     <TextView
         android:id="@+id/textAtm"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Base ATM: "
@@ -141,7 +121,7 @@
 
     <TextView
         android:id="@+id/textDef"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Base DEF: "
@@ -162,7 +142,7 @@
 
     <TextView
         android:id="@+id/textDfm"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Base DFM: "
@@ -189,15 +169,36 @@
         app:layout_constraintGuide_begin="205dp" />
 
     <TextView
-        android:id="@+id/textDex"
-        android:layout_width="75dp"
+        android:id="@+id/textEnergiaBase"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
+        android:text="Energía base: "
+        android:textAlignment="textEnd"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/textNombre" />
+
+    <EditText
+        android:id="@+id/etEnergia_CR"
+        android:layout_width="50dp"
+        android:layout_height="52dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="@+id/textEnergiaBase"
+        app:layout_constraintStart_toEndOf="@+id/textEnergiaBase"
+        app:layout_constraintTop_toTopOf="@+id/textEnergiaBase" />
+
+    <TextView
+        android:id="@+id/textDex"
+        android:layout_width="95dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="Base DEX: "
         android:textAlignment="textEnd"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline1" />
 
     <EditText
         android:id="@+id/etDex_CR"
@@ -212,7 +213,7 @@
 
     <TextView
         android:id="@+id/textEva"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Base EVA: "
@@ -233,7 +234,7 @@
 
     <TextView
         android:id="@+id/textCrt"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Base CRT: "
@@ -254,7 +255,7 @@
 
     <TextView
         android:id="@+id/textAcc"
-        android:layout_width="75dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Base ACC: "
@@ -272,6 +273,27 @@
         app:layout_constraintBottom_toBottomOf="@+id/textAcc"
         app:layout_constraintStart_toEndOf="@+id/textAcc"
         app:layout_constraintTop_toTopOf="@+id/textAcc" />
+
+    <TextView
+        android:id="@+id/textDescripcion"
+        android:layout_width="95dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:text="Descripción: "
+        android:textAlignment="textEnd"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+    <EditText
+        android:id="@+id/etDescripcion_CR"
+        android:layout_width="256dp"
+        android:layout_height="52dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/textDescripcion"
+        app:layout_constraintStart_toEndOf="@+id/textDescripcion"
+        app:layout_constraintTop_toTopOf="@+id/textDescripcion" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -299,7 +321,7 @@
         app:layout_constraintGuide_begin="650dp" />
 
     <Button
-        android:id="@+id/btCrear_CR"
+        android:id="@+id/btCrearActualizar_CR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Crear"
