--- a/app/src/main/res/layout/fragment_detalle_clase.xml
+++ b/app/src/main/res/layout/fragment_detalle_clase.xml
@@ -27,31 +27,15 @@
         app:layout_constraintGuide_begin="75dp" />
 
     <TextView
-        android:id="@+id/tvDetalle_DC"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:text="[descripción]"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline1" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="230dp" />
-
-    <TextView
         android:id="@+id/textModVida"
-        android:layout_width="120dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Modificador vida:"
         android:textAlignment="textEnd"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline1" />
 
     <TextView
         android:id="@+id/tvModVida_DC"
@@ -61,12 +45,30 @@
         app:layout_constraintBottom_toBottomOf="@+id/textModVida"
         app:layout_constraintStart_toEndOf="@+id/textModVida" />
 
+    <TextView
+        android:id="@+id/textModEnergia"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Midificador energia: "
+        android:textAlignment="textEnd"
+        app:layout_constraintStart_toStartOf="@+id/textModVida"
+        app:layout_constraintTop_toBottomOf="@+id/textModVida" />
+
+    <TextView
+        android:id="@+id/tvModEnergia_DC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="[mod]"
+        app:layout_constraintBottom_toBottomOf="@+id/textModEnergia"
+        app:layout_constraintStart_toEndOf="@+id/textModEnergia" />
+
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
+        android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="280dp" />
+        app:layout_constraintGuide_begin="165dp" />
 
     <TextView
         android:id="@+id/textAtk"
@@ -77,7 +79,7 @@
         android:text="Modificador ATK: "
         android:textAlignment="textEnd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <TextView
         android:id="@+id/tvModAtk_DC"
@@ -157,7 +159,7 @@
         android:text="Modificador DEX: "
         android:textAlignment="textEnd"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <TextView
         android:id="@+id/tvModDex_DC"
@@ -222,11 +224,28 @@
         app:layout_constraintStart_toEndOf="@+id/textAcc" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="328dp" />
+
+    <TextView
+        android:id="@+id/tvDetalle_DC"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="[descripción]"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="640dp" />
+        app:layout_constraintGuide_begin="650dp" />
 
     <Button
         android:id="@+id/btEditar_DC"
@@ -243,6 +262,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Borrar"
+        android:backgroundTint="#FF4B4B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btEditar_DC"
