--- a/app/src/main/res/layout/fragment_personaje.xml
+++ b/app/src/main/res/layout/fragment_personaje.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPersonajes_PJ"
+        android:id="@+id/rvPersonajes_P"
         android:layout_width="match_parent"
         android:layout_height="580dp"
         android:layout_marginTop="16dp"
@@ -28,23 +28,23 @@
         app:layout_constraintTop_toBottomOf="@+id/textTitulo" />
 
     <TextView
-        android:id="@+id/tvAviso_PJ"
+        android:id="@+id/tvAviso_P"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="[Aviso]"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/rvPersonajes_PJ"
-        app:layout_constraintStart_toStartOf="@+id/rvPersonajes_PJ"
-        app:layout_constraintTop_toTopOf="@+id/rvPersonajes_PJ" />
+        app:layout_constraintEnd_toEndOf="@+id/rvPersonajes_P"
+        app:layout_constraintStart_toStartOf="@+id/rvPersonajes_P"
+        app:layout_constraintTop_toTopOf="@+id/rvPersonajes_P" />
 
     <Button
-        android:id="@+id/btNuevo_PJ"
+        android:id="@+id/btNuevo_P"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nuevo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvPersonajes_PJ" />
+        app:layout_constraintTop_toBottomOf="@+id/rvPersonajes_P" />
 </androidx.constraintlayout.widget.ConstraintLayout>
