--- a/app/src/main/res/layout/style_sp_c1.xml
+++ b/app/src/main/res/layout/style_sp_c1.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="#000000"
-    android:background="#ffffff"
-    android:textSize="20sp" />
+    android:textSize="16dp"
+    android:paddingLeft="5dp"
+    android:background="#ffffff" />
